--- a/portfolio.css
+++ b/portfolio.css
@@ -549,7 +549,7 @@ section {
 
     .menu-btn {
        position: absolute;
-       background: url("menu.png") no-repeat;
+       background: url("img/menu.png") no-repeat;
        background-size: 30px; 
        background-position: center;
        width: 40px;
@@ -561,7 +561,7 @@ section {
     }
     .menu-btn.active{
         z-index: 999;
-        background: url("close.png") no-repeat;
+        background: url("img/close.png") no-repeat;
         background-size: 25px;
         background-position: center;
         transition: .3s ease;
